istio-setup/istio-gateway/cluster-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: cluster-virtual-service
  namespace: default  # Use the namespace where service is deployed
spec:
  hosts:
  - "*"  # This should match the host in the Gateway configuration. Adjust as necessary.
  gateways:
  - cluster-gateway
  http:  
  - match:
    - uri:
        prefix: "/process"  # Adjust the prefix as necessary, depending on your service's API endpoints.
    route:
    - destination:
        host: message-processing-service.default.svc.cluster.local  # Ensure this matches service's name and namespace
        port:
          number: 80
  - match:
    - uri:
        prefix: "/message"  # Path for the microservice's endpoint
    route:
    - destination:
        host: simple-msg-svc.default.svc.cluster.local  # this should match the service's name and namespace
        port:
          number: 80
